fixed spacing on landing page

--- a/public/landingStylesheet.css
+++ b/public/landingStylesheet.css
@@ -63,6 +63,7 @@ justify-content: center;
 }
 
 .footer {
+    /* position: fixed; */
     left: 0;
     bottom: 0;
     /* height: 8vh; */
@@ -70,6 +71,10 @@ justify-content: center;
     background-color: #84d0ce;
     color: white;
     text-align: center;
+  }
+
+  #noBorder {
+      border: 0;
   }
 
   /* the two following makes sure that the links stay white and the underline is also white 
